generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id            String     @id
  name          String
  email         String
  emailVerified Boolean    @default(false)
  image         String?
  createdAt     DateTime   @default(now())
  updatedAt     DateTime   @default(now()) @updatedAt
  sessions      Session[]
  accounts      Account[]
  workflows     Workflow[]

  @@unique([email])
  @@map("user")
}

model Session {
  id        String   @id
  expiresAt DateTime
  token     String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  ipAddress String?
  userAgent String?
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([token])
  @@map("session")
}

model Account {
  id                    String     @id
  accountId             String
  providerId            String
  userId                String
  user                  User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime   @default(now())
  updatedAt             DateTime   @updatedAt
  workflows             Workflow[]

  @@map("account")
}

model Verification {
  id         String   @id
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @default(now()) @updatedAt

  @@map("verification")
}

model Workflow {
  id        String   @id @default(cuid())
  name      String
  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  userId      String
  user        User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  account     Account?     @relation(fields: [accountId], references: [id])
  accountId   String?
  nodes       Node[]
  connections Connection[]
}

enum NodeType {
  INITIAL
}

model Node {
  id         String   @id @default(cuid())
  workflowId String
  workflow   Workflow @relation(fields: [workflowId], references: [id], onDelete: Cascade)

  name              String
  type              NodeType
  position          Json
  data              Json         @default("{}")
  outputConnections Connection[] @relation("FromNode")
  inputConnections  Connection[] @relation("ToNode")

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model Connection {
  id         String   @id @default(cuid())
  workflowId String
  workflow   Workflow @relation(fields: [workflowId], references: [id], onDelete: Cascade)

  fromNodeId String
  fromNode   Node   @relation("FromNode", fields: [fromNodeId], references: [id], onDelete: Cascade)

  toNodeId String
  toNode   Node   @relation("ToNode", fields: [toNodeId], references: [id], onDelete: Cascade)

  fromOutput String @default("main")
  toInput    String @default("main")

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([fromNodeId, toNodeId, fromOutput, toInput])
}
